$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-26 (opened February 11, 2013)

	* New version opened with the release of vegan_2.0-6 on February
	11, 2013.

	* tabasco: a sister function of vegemite() to display a compact
	community table using heatmap(). Both vegemite() and tabasco() can
	handle cluster::agnes() trees.

	* wcmdscale: return a full "wcmdscale" object if any argument is
	set to non-default value. This also implies that if weights 'w'
	are set, the result will be full "wcmdscale" object with a
	"weights" item, instead of a simple matrix with no information
	about weights used.
	
Version 2.1-25 (closed February 11, 2013)

	* FAQ: new entry on impossibility of using random effects in cca,
	rda, capscale & adonis, and telling how to do this
	approximately. Please comment and correct.

	* oecosimu: changed the structure of the oecosimu() result
	object. It now returns a list of two items: "statistic" is the
	observed statistic, and "oecosimu" which contains the simulation
	records. In previous version the function returned the statistic
	and added item "oecosimu" there. Previously, the result object was
	of type c("oecosimu", class(statistic)) as the original
	"statistic" object was returned amended with an "oecosimu" item,
	but now it is only of type "oecosimu" with the original
	"statistic" as a separate item. So "statistic" is now one level
	deeper instead of being the main object.

	* predict.cca, predict.rda: In rev2412, 2413 we studied including
	partial (pCCA) component in predict(..., type="response") and
	predict(..., type="working") models, but then adopted a policy of
	never having partial component, but always returning only the
	component requested for. Therefore warning messages of ignoring
	pCCA component were removed. This log entry was made to emphasize
	that there is a policy decision, and an alternative policy can be
	tracked in the repository.
