@@ -41,7 +41,8 @@ metaMDSdist(comm, distance = "bray", autotransform = TRUE,
     noshare = TRUE, trace = 1, commname, zerodist = "ignore", 
     distfun = vegdist, ...)
 metaMDSiter(dist, k = 2, trymax = 20, trace = 1, plot = FALSE, 
-    previous.best, engine = "monoMDS", parallel = getOption("mc.cores"), ...)   
+    previous.best, engine = "monoMDS", maxit = 200,
+    parallel = getOption("mc.cores"), ...)   
 initMDS(x, k=2)
 postMDS(X, dist, pc=TRUE, center=TRUE, halfchange, threshold=0.8,
     nthreshold=10, plot=FALSE, ...)
@@ -119,6 +120,10 @@ metaMDSredist(object, ...)
  \item{distfun}{Dissimilarity function. Any function returning a
    \code{dist} object and accepting argument \code{method} can be used
    (but some extra arguments may cause name conflicts).}
+
+ \item{maxit}{Maximum number of iterations in the single NMDS run;
+   passed to the \code{engine} function \code{\link{monoMDS}} or
+   \code{\link[MASS]{isoMDS}}.}
 
  \item{parallel}{Number of parallel processes or a predefined socket
    cluster.  If you use pre-defined socket clusters (say,
