@@ -7,6 +7,10 @@ Version 2.1-26 (opened February 11, 2013)
 	* New version opened with the release of vegan_2.0-6 on February
 	11, 2013.
 
+	* metaMDS: exposed argument 'maxit' in metaMDSiter() so that users
+	can set the number of iterations in monoMDS() or isoMDS(). After a
+	wish by Jon Bakker, Univ Washington (U.S.A.).
+
 	* tabasco: a sister function of vegemite() to display a compact
 	community table using heatmap(). Both vegemite() and tabasco() can
 	handle cluster::agnes() trees.
